Changed styles for profile and side menu

--- a/Ionic/www/templates/profile.html
+++ b/Ionic/www/templates/profile.html
@@ -13,9 +13,9 @@
         {{cat.name}}
 
       </ion-item>
-      
-      <button ng-click='addCatNav()' class="button button-full button-positive">
-        Add New Categories
+
+      <button ng-click='addCatNav()' class="button raised button-full button-positive">
+        Manage Categories
       </button>
     </ion-list>
   </ion-content>
