--- a/Ionic/www/templates/login.html
+++ b/Ionic/www/templates/login.html
@@ -1,18 +1,19 @@
-<ion-view class="background">
-  <ion-content>
+<ion-view>
+  <div class="background"></div>
+  <ion-content scroll="false">
     <div class="row row-center">
       <div class="col text-center">
         <h1 class="loginPage">DartFeed</h1>
-        <p class="info">Tech news made easy</p>
+        <p class="info">Get Your News Now (period)</p>
 <!--         <img src='http://chooserethink.com/wp-content/uploads/2014/07/dart.png'>-->
       </div>
     </div>
   </ion-content>
   <div class="col text-center" style="position: absolute; bottom: 0px; width: 100%">
-      <button class="FBbutton button raised button-positive" ng-click="fbLogin()">
-      Login with Facebook
-      <paper-ripple></paper-ripple>
-      </button>
+    <button class="FBbutton button raised button-positive" ng-click="fbLogin()">
+    Login with Facebook
+    <paper-ripple></paper-ripple>
+    </button>
   </div>
 </ion-view>
 
