--- a/Ionic/www/css/style.css
+++ b/Ionic/www/css/style.css
@@ -1,18 +1,25 @@
 /* Empty. Add your own CSS if you like */
 .background {
-  background-image: url('../img/forest.jpg');
-  width: 900px;
+/*  background-image: url('../img/forest.jpg');*/
+  background-color: #3F51B5;
+  width: 2000px;
   height: 1016px;
-  -webkit-filter: blur(10px);
-  -moz-filter: blur(10px);
-  -o-filter: blur(10px);
-  -ms-filter: blur(10px);
-  filter: blur(10px);
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: blur(3px);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
 }
 
+/*.logo {
+  background-image: url('../img/earth.gif');
+  width: 247px;
+  height: 248px;
+}
+*/
 .userImg {
   border-radius: 50%;
   height: 100px;
@@ -23,7 +30,7 @@
 }
 
 .loginPage {
-  color: white;
+  color: #FFFFFF;
   font-family: 'Raleway';
   font-size: 60px;
   font-style: normal;
@@ -31,16 +38,20 @@
   font-weight: 250;
   padding: 20px;
   line-height: 26.3999996185303px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #009688;
+  background-color: #009688;
 }
 
 .info {
-  color: white;
-  font-family: 'Raleway', sans-serif;
+  color: #FFEBEE;
+  font-family: 'Helvetica';
   font-size: 20px;
   font-style: normal;
   font-variant: normal;
   font-weight: 250;
-  padding: 20px;
+  padding: 10px;
   line-height: 26.3999996185303px;
 }
 
@@ -53,17 +64,26 @@ img {
   height: 350px;
 }
 
+.Aligner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Aligner-item {
+  max-width: 50%;
+}
+
 .FBbutton {
   display: inline-block;
   position: relative;
-  width: 300px;
+  width: 250px;
   height: 50px;
   line-height: 32px;
   font-size: 1.5em;
-  background-color: #fff;
-  color: #646464;
+  color: #FFEBEE;
   border-radius: 20px;
-
+  background:transparent
 }
 
 .button > paper-ripple {
