--- a/Ionic/www/templates/login.html
+++ b/Ionic/www/templates/login.html
@@ -2,15 +2,15 @@
   <div class="background"></div>
   <ion-content scroll="false">
     <div class="row row-center">
-      <div class="col text-center">
+      <div class="col text-center" style="position: absolute; bottom: 475px;">
         <h1 class="loginPage">DartFeed</h1>
-        <p class="info">Get Your News Now (period)</p>
+        <p class="info">Aggregating tech news</p>
 <!--         <img src='http://chooserethink.com/wp-content/uploads/2014/07/dart.png'>-->
       </div>
-    </div>
   </ion-content>
-  <div class="col text-center" style="position: absolute; bottom: 0px; width: 100%">
-    <button class="FBbutton button raised button-positive" ng-click="fbLogin()">
+
+  <div class="Aligner" style="position: absolute; bottom: 125px; width: 100%">
+    <button class="Aligner-item FBbutton button raised"  ng-click="fbLogin()">
     Login with Facebook
     <paper-ripple></paper-ripple>
     </button>
