--- a/Ionic/www/templates/addCat.html
+++ b/Ionic/www/templates/addCat.html
@@ -1,10 +1,10 @@
 <ion-view view-title="New Categories">
   <ion-content ng-controler="UserController">
     <ion-list>
-      <h1 style='text-align: center;'> Add Categories </h1>
+      <h1 class="font" style='text-align: center;'> Add Categories </h1>
 
-      <ion-checkbox ng-repeat="cat in catList" ng-model="cat.checked" ng-checked="cat.checked" ng-click="test(cat)">{{cat.name}}</ion-checkbox>
-      <button ng-click='saveCats()' class="button button-full button-positive">
+      <ion-checkbox class="font" ng-repeat="cat in catList" ng-model="cat.checked" ng-checked="cat.checked" ng-click="test(cat)">{{cat.name}}</ion-checkbox>
+      <button ng-click='saveCats()' class="button button-full font button-positive">
         Save Categories
       </button>
     </ion-list>
