--- a/Ionic/www/templates/login.html
+++ b/Ionic/www/templates/login.html
@@ -3,7 +3,7 @@
   <ion-content scroll="false">
     <div class="row row-center">
       <div class="col text-center" style="position: absolute; bottom: 475px;">
-        <h1 class="loginPage">DartFeed</h1>
+        <h1 class="loginPage raised">DartFeed</h1>
         <p class="info">Aggregating tech news</p>
 <!--         <img src='http://chooserethink.com/wp-content/uploads/2014/07/dart.png'>-->
       </div>
