--- a/Ionic/www/templates/login.html
+++ b/Ionic/www/templates/login.html
@@ -4,7 +4,7 @@
     <div class="row row-center">
       <div class="col text-center" style="position: absolute; bottom: 475px;">
         <h1 class="loginPage raised">DartFeed</h1>
-        <p class="info">Aggregating tech news</p>
+        <p class="info">Tech news every day, on the go, in a mobile app</p>
 <!--         <img src='http://chooserethink.com/wp-content/uploads/2014/07/dart.png'>-->
       </div>
   </ion-content>
