Facebook login button stretch

--- a/Ionic/www/templates/login.html
+++ b/Ionic/www/templates/login.html
@@ -10,7 +10,7 @@
   </ion-content>
 
   <div class="Aligner" style="position: absolute; bottom: 125px; width: 100%">
-    <button class="Aligner-item FBbutton button raised"  ng-click="fbLogin()">
+    <button class="Aligner-item FBbutton button button-full raised"  ng-click="fbLogin()">
     Login with Facebook
     <paper-ripple></paper-ripple>
     </button>
